--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <strong>Elements of Greedy Strategy</strong>
         <ul>
           <li>Huffman Coding</li>
-          <li>Single‑Source Shortest Path</li>
+          <li><a href="short.html" class="algo-link">Single‑Source Shortest Path</a></li>
         </ul>
       </div>
     </div>
