--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </ul>
         <strong>Elements of Greedy Strategy</strong>
         <ul>
-          <li>Huffman Coding</li>
+          <li><a href="huff.html" class="algo-link">Huffman Coding</a></li>
           <li><a href="short.html" class="algo-link">Single‑Source Shortest Path</a></li>
         </ul>
       </div>
